--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,12 +69,12 @@ and open the template in the editor.
                 </div>
             </form>
         </div>
-<!--        <div class="clearfix">
+        <div class="clearfix">
             <span th:if="${param.error}">
                 <p class="text-center big" style="color:red;">
                     Invalid inputs! Or You haven't permitted by admin.Please, waiting for permission
                 </p>
             </span>
-        </div>-->
+        </div>
     </body>
 </html>
