--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,13 +4,17 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
+        <title>User Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
     <body>
-        <div>Welcome    It is User page</div>
+        <div>
+            <h2>Welcome user page</h2>
+            <a th:href="@{/logout}" role="button" class="btn btn-primary">Logout</a>
+        </div>
     </body>
 </html>
