--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,15 +6,11 @@ and open the template in the editor.
 -->
 <html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Manager Page</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
     <body>
-        <div>
-            <h2>Welcome manager page</h2>
-            <a th:href="@{/logout}" role="button" class="btn btn-primary">Logout</a>
-        </div>
+        <div>Welcome index page</div>
     </body>
 </html>
