--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,7 +55,7 @@ and open the template in the editor.
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                        <input type="text" name="username" class="form-control" placeholder="Username" required="required">
+                        <input type="text" name="username" class="form-control" placeholder="Email" required="required">
                     </div>
                 </div>
                 <div class="form-group">
@@ -66,6 +66,9 @@ and open the template in the editor.
                 </div>        
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block">Log in</button>
+                </div>
+                <div class="clearfix">
+                    <p class="text-center small">Have you forgotten password? <a href="/registration">Forgot Password</a>.</p>
                 </div>
             </form>
         </div>
